[package]
name = "qrust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-complex = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = "0.30.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
